# GLLib

./: .gitignore  README.md  gllib.cabal
.stack-work/install/x86_64-linux-tinfo6/lts-7.15/8.0.1/flag-cache/: GLFW-b-1.4.8.1-2oLi8d8Om6j90ytPw2you1  GLURaw-2.0.0.3-4meYWmf1nmHBiZ45qGDNMo  ObjectName-1.1.0.1-HHHIolNI8Pm5H3OGkgSUrO  OpenGL-3.0.1.0-BDhnYdrGgNz16iL8mzBKvu  OpenGLRaw-3.2.4.0-HKWm6hq2lRHL6jgi8DHARb  StateVar-1.1.0.4-CJpWsiXJdd89SnV9dZtTwc  bindings-DSL-1.0.23-GUrVdpTUVQC2JWoov2sGwA  bindings-GLFW-3.1.2.2-2GG6GK5a2OkK8NpUgT7p3p  fixed-0.2.1.1-21JkkJmr6h52cZo1o8cauA  gllib-0.1.0.0-7vgdlXxVJwD1kkF9yyXzwT  half-0.2.2.3-BFHx0LiJemg6baNXrjGThF  stm-2.4.4.1-4z2NRWnB0NIIUvSJsHW0kF  text-1.2.2.1-5QpmrLQApEZ4Ly9nMHWY0s
.stack-work/install/x86_64-linux-tinfo6/lts-7.15/8.0.1/pkgdb/: gllib-0.1.0.0-7vgdlXxVJwD1kkF9yyXzwT.conf  package.cache
.stack-work/install/x86_64-linux/lts-7.14/8.0.1/flag-cache/: GLFW-b-1.4.8.1-2oLi8d8Om6j90ytPw2you1  GLURaw-2.0.0.2-AXlZJMzLVuB3v2bdcCI6eV  ObjectName-1.1.0.1-HHHIolNI8Pm5H3OGkgSUrO  OpenGL-3.0.1.0-BmibHLg6NtpDV9RJSt4S3R  OpenGLRaw-3.2.4.0-HKWm6hq2lRHL6jgi8DHARb  StateVar-1.1.0.4-CJpWsiXJdd89SnV9dZtTwc  bindings-DSL-1.0.23-GUrVdpTUVQC2JWoov2sGwA  bindings-GLFW-3.1.2.2-2GG6GK5a2OkK8NpUgT7p3p  fixed-0.2.1.1-21JkkJmr6h52cZo1o8cauA  gllib-0.1.0.0-Dr7MmQ4NG5AA7scfBZEaPU  half-0.2.2.3-BFHx0LiJemg6baNXrjGThF  stm-2.4.4.1-4z2NRWnB0NIIUvSJsHW0kF  text-1.2.2.1-5QpmrLQApEZ4Ly9nMHWY0s
.stack-work/install/x86_64-linux/lts-7.14/8.0.1/pkgdb/: gllib-0.1.0.0-Dr7MmQ4NG5AA7scfBZEaPU.conf  package.cache
.stack-work/install/x86_64-linux/lts-7.15/8.0.1/flag-cache/: GLFW-b-1.4.8.1-2oLi8d8Om6j90ytPw2you1  GLURaw-2.0.0.3-4meYWmf1nmHBiZ45qGDNMo  ObjectName-1.1.0.1-HHHIolNI8Pm5H3OGkgSUrO  (+9 more)
app/: Main.hs  Tutorial2.hs  Tutorial3.hs  Tutorial4.hs  Tutorial5.hs  Tuttest.hs
app/OldVersions/: Tutorial5.hs
app/Tut6/: Init.hs  Program.hs  Shaders.hs  Tutorial.hs  Types.hs
src/: Geometry.hs  Lights.hs  LinAlg.hs  Matrices.hs  Model.hs  Utils.hs
(+31 files in other folders)
