name:                gllib
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jragonfyre/tut2#readme
license:             BSD3
license-file:        LICENSE
author:              Jason Schuchardt
maintainer:          jargon.schuchardt@gmail.com
copyright:           null
category:            Games
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , LinAlg
                     , Geometry
                     , Matrices
                     , Utils
                     , Model
  build-depends:       base >= 4.7 && < 5
                     , OpenGL 
                     , OpenGLRaw
                     --, GLUT
                     , ObjectName
                     , GLFW-b 
                     , containers
  default-language:    Haskell2010

executable gllibx
  hs-source-dirs:      app
  other-modules:       Tutorial5
                     , Tutorial2
                     , Tutorial3
                     , Tutorial4
                     , Tuttest
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , OpenGL
                     , OpenGLRaw
                     --, GLUT
                     , ObjectName
                     , GLFW-b
                     , gllib
  default-language:    Haskell2010

test-suite gllib-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gllib
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jragonfyre/gllib
